2004-03-19  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-add-referer-regexps): Fix typo.
	(w3m-add-referer-predicate-function): New user option.
	(w3m-add-referer-predicate-by-referer-regexps): New function.
	(w3m-add-referer-predicate-by-hosts): Ditto.
	(w3m-request-arguments): Call w3m-add-referer-predicate-function.
	(w3m-header-arguments): Ditto.

	* octet.el (mime-view-octet): Avoid redundant invocation of
	`mime-entity-content'.

2004-03-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-kantei.el: Support the English edition.  It may need
	to be fixed when the regular distribution starts.
	(shimbun-kantei-url): Exclude the subdirectory.
	(shimbun-kantei-groups): Add m-magazine-en and m-magazine-ja.
	(shimbun-kantei-content-start): Support the English edition.
	(shimbun-kantei-content-end): Ditto.
	(shimbun-index-url): Ditto.
	(shimbun-from-address): Ditto.
	(shimbun-get-headers): Ditto.
	(shimbun-clear-contents): Ditto.

2004-03-14  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-symbol.el (w3m-mule-unicode-symbol): Fixed 32th character.
	Thanks to Taichi KAWABATA for his report.

2004-03-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-message): Handle ## correctly.

2004-03-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-make-date-string): Add a day of week.

2004-03-06  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-weather.el (w3m-weather-get-seikatu-sisu): Relax regular
	expressions to extract indices, to follow the change of the site
	design.

2004-03-06  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* shimbun/sb-f1express.el (shimbun-get-headers): Follow the change
	of the site.

2004-03-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-force-window-update): New function.
	(w3m-tab-drag-mouse-function, w3m-tab-click-mouse-function,
	w3m-tab-line, w3m-e21-switch-to-buffer, w3m-select-buffer-hook):
	Use `w3m-force-window-update' instead of
	`w3m-e21-wobble-window-size'.