@@ -150,7 +150,7 @@
 
 (defconst emacs-w3m-version
   (eval-when-compile
-    (let ((rev "$Revision: 1.1008 $"))
+    (let ((rev "$Revision: 1.1009 $"))
       (and (string-match "\\.\\([0-9]+\\) \\$\\'" rev)
 	   (setq rev (- (string-to-number (match-string 1 rev)) 1006))
 	   (concat "1.3.85" (if (> rev 0) (format ".%d" rev) "")))))
@@ -223,7 +223,9 @@ The valid values include `w3m', `w3mmee', and `w3m-m17n'.")
 				     (save-excursion (end-of-line)
 						     (point)))
 				    ",")
-		      (list nil)))))))))
+		      (list nil)))
+	    (when (member "m17n" w3m-compile-options)
+	      (setq w3m-type 'w3m-m17n))))))))
 
 (defcustom w3m-user-agent (concat "Emacs-w3m/" emacs-w3m-version
 				  " " w3m-version)
