@@ -1,3 +1,7 @@
+2004-03-22  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
+
+	* w3m.el (w3m-type): Check if w3m-compile-options contains "m17n".
+
 2004-03-19  Yuuichi Teranishi  <teranisi@gohome.org>
 
 	* w3m.el (w3m-add-referer-regexps): Fix typo.
